<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>xyz.syodo</groupId>
    <artifactId>AnyVersion</artifactId>
    <version>2.3.2</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>PowerNukkitX-releases</id>
            <name>PowerNukkitX Repository</name>
            <url>https://repo.powernukkitx.org/releases</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://www.jitpack.io</url>
        </repository>
        <repository>
            <id>opencollab-repository-maven-releases</id>
            <name>Opencollab Repository releases</name>
            <url>https://repo.opencollab.dev/maven-releases</url>
        </repository>
        <repository>
            <id>opencollab-repository-maven-snapshots</id>
            <name>Opencollab Repository snapshots</name>
            <url>https://repo.opencollab.dev/maven-snapshots</url>
        </repository>
    </repositories>

    <build>
        <finalName>AnyVersion</finalName>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <!-- put your configurations here -->
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.powernukkitx</groupId>
            <artifactId>server</artifactId>
            <version>2.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.cloudburstmc.protocol</groupId>
            <artifactId>bedrock-codec</artifactId>
            <version>3.0.0.Beta11-20251212.150341-16</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.cloudburstmc.math</groupId>
            <artifactId>immutable</artifactId>
            <version>2.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
